--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -97,7 +97,7 @@ a:hover {
 .options,
 .credits {
     background-color: rgba(0, 0, 0, 0.2);
-    padding: 20px;
+    padding: 30px;
     border-radius: 10px;
     z-index: 2;
     margin: 0 3px;
@@ -304,8 +304,7 @@ a:hover {
 .game-container {
     position: absolute;
     bottom: 6.5vw;
-    right: 50%;
-    transform: translateX(50%);
+    right: 0%;
     width: 100%;
     height: 20vh;
     display: flex;
@@ -325,7 +324,7 @@ a:hover {
     background-color: rgba(0, 0, 0, 0.5);
     color: rgb(255, 255, 255);
     cursor: pointer;
-    z-index: 1;
+    z-index: 2;
     transition: 0.5s ease;
 }
 .play:hover,
@@ -333,7 +332,7 @@ a:hover {
     background-color: rgba(0, 0, 0, 0.8);
     transition: 0.5s ease; 
 }
-@media (max-height: 1200px) {
+@media (max-height: 768px) {
     .play,
     .settings {
         padding: 10px 20px;
@@ -345,6 +344,13 @@ a:hover {
     }
     .lihsr {
         transform: translate(-50%, -50%) scale(0.5); /* Shrink the logo by 50% */
+    }
+    .version {
+        font-size: 20px;
+    }
+    .options,
+    .credits {
+        padding: 15px;
     }
     .settings-map.active,
     .settings-gamemodestext.active,
