--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -813,100 +813,100 @@ input:checked + .slider:before {
     background-color: #ffffff;
     border: 1px solid #ccc;
     z-index: 3;
-    max-height: 400px; /* Adjust the height as needed */
+    max-height: 300px;
     overflow: auto;
-  }
-  .dropdown-menu.show {
+}
+.dropdown-menu.show {
     display: block;
-  }
-  
-  .dropdown-menu li {
+}
+
+.dropdown-menu li {
     padding: 10px;
     cursor: pointer;
     z-index: 3;
-  }
-    .dropdown-menu .hst-mcz:hover,
-    .dropdown-menu .hst-bz:hover,
-    .dropdown-menu .hst-stz:hover,
-    .dropdown-menu .hst-suz:hover,
-    .dropdown-menu .hst-scz:hover,
-    .dropdown-menu .j6-ad:hover,
-    .dropdown-menu .j6-osp:hover,
-    .dropdown-menu .j6-bp:hover,
-    .dropdown-menu .j6-sgrz:hover,
-    .dropdown-menu .j6-cofe:hover,
-    .dropdown-menu .j6-eh:hover,
-    .dropdown-menu .j6-poc:hover,
-    .dropdown-menu .j6-owtg:hover,
-    .dropdown-menu .j6-bt:hover,
-    .dropdown-menu .j6-gm:hover,
-    .dropdown-menu .j6-rt:hover,
-    .dropdown-menu .j6-rs:hover,
-    .dropdown-menu .j6-ad:hover,
-    .dropdown-menu .j6-owtg:hover,
-    .dropdown-menu .j6-rt:hover,
-    .dropdown-menu .j6-rs:hover,
-    .dropdown-menu .txl-csh:hover,
-    .dropdown-menu .txl-c:hover,
-    .dropdown-menu .txl-sn:hover,
-    .dropdown-menu .txl-es:hover,
-    .dropdown-menu .txl-aa:hover,
-    .dropdown-menu .txl-dc:hover,
-    .dropdown-menu .txl-fg:hover,
-    .dropdown-menu .txl-ac:hover,
-    .dropdown-menu .txl-sw:hover,
-    .dropdown-menu .txl-c:hover,
-    .dropdown-menu .txl-dc:hover,
-    .dropdown-menu .txl-ac:hover,
-    .dropdown-menu .p-tr:hover,
-    .dropdown-menu .p-gh:hover,
-    .dropdown-menu .p-de:hover,
-    .dropdown-menu .p-acd:hover,
-    .dropdown-menu .p-trd:hover,
-    .dropdown-menu .p-dp:hover,
-    .dropdown-menu .p-cstp:hover{
-        background-color: #f2f2f2;
-    }
+}
+.dropdown-menu .hst-mcz:hover,
+.dropdown-menu .hst-bz:hover,
+.dropdown-menu .hst-stz:hover,
+.dropdown-menu .hst-suz:hover,
+.dropdown-menu .hst-scz:hover,
+.dropdown-menu .j6-ad:hover,
+.dropdown-menu .j6-osp:hover,
+.dropdown-menu .j6-bp:hover,
+.dropdown-menu .j6-sgrz:hover,
+.dropdown-menu .j6-cofe:hover,
+.dropdown-menu .j6-eh:hover,
+.dropdown-menu .j6-poc:hover,
+.dropdown-menu .j6-owtg:hover,
+.dropdown-menu .j6-bt:hover,
+.dropdown-menu .j6-gm:hover,
+.dropdown-menu .j6-rt:hover,
+.dropdown-menu .j6-rs:hover,
+.dropdown-menu .j6-ad:hover,
+.dropdown-menu .j6-owtg:hover,
+.dropdown-menu .j6-rt:hover,
+.dropdown-menu .j6-rs:hover,
+.dropdown-menu .txl-csh:hover,
+.dropdown-menu .txl-c:hover,
+.dropdown-menu .txl-sn:hover,
+.dropdown-menu .txl-es:hover,
+.dropdown-menu .txl-aa:hover,
+.dropdown-menu .txl-dc:hover,
+.dropdown-menu .txl-fg:hover,
+.dropdown-menu .txl-ac:hover,
+.dropdown-menu .txl-sw:hover,
+.dropdown-menu .txl-c:hover,
+.dropdown-menu .txl-dc:hover,
+.dropdown-menu .txl-ac:hover,
+.dropdown-menu .p-tr:hover,
+.dropdown-menu .p-gh:hover,
+.dropdown-menu .p-de:hover,
+.dropdown-menu .p-acd:hover,
+.dropdown-menu .p-trd:hover,
+.dropdown-menu .p-dp:hover,
+.dropdown-menu .p-cstp:hover{
+    background-color: #f2f2f2;
+}
 
-  .dropdown-menu .sub-menu-hst,
-  .dropdown-menu .sub-menu-j6,
-  .dropdown-menu .sub-menu-txl,
-  .dropdown-menu .sub-menu-p{
-   display: none;
+.dropdown-menu .sub-menu-hst,
+.dropdown-menu .sub-menu-j6,
+.dropdown-menu .sub-menu-txl,
+.dropdown-menu .sub-menu-p{
+    display: none;
     max-height: 200px; /* Adjust the height as needed */
     overflow: auto;
-  }
-  
-  .dropdown-menu .sub-menu-hst.show,
-  .dropdown-menu .sub-menu-j6.show,
-  .dropdown-menu .sub-menu-txl.show,
-  .dropdown-menu .sub-menu-p.show{
-    display: block;
-  }
+}
 
-  .dropdown-menu .sub-menu-hst .hst-mcz:hover {
+.dropdown-menu .sub-menu-hst.show,
+.dropdown-menu .sub-menu-j6.show,
+.dropdown-menu .sub-menu-txl.show,
+.dropdown-menu .sub-menu-p.show{
+    display: block;
+}
+
+.dropdown-menu .sub-menu-hst .hst-mcz:hover {
     background-color: #f2f2f2;
-  }
+}
 /* width */
 ::-webkit-scrollbar {
     width: 10px;
-  }
-  
-  /* Track */
-  ::-webkit-scrollbar-track {
+}
+
+/* Track */
+::-webkit-scrollbar-track {
     background: #f1f1f1;
-  }
-  
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
     background: #cecece;
-  }
-  
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
     background: #272727;
-  }
-  .floor-btn {
+}
+.floor-btn {
     font-family: 'DIN', sans-serif;
     font-size: 12px;
     font-weight: bold;
@@ -916,10 +916,10 @@ input:checked + .slider:before {
     cursor: pointer;
     z-index: 3;
     transition: transform 0.5s ease;
-  }
-  .floor-btn:hover {
+}
+.floor-btn:hover {
     background-color: rgba(165, 165, 165, 0.5)
-  }
+}
 #starrailmap {
     position: fixed;
     opacity: 0;
@@ -1211,10 +1211,13 @@ input:checked + .slider:before {
         height: 250px;
     }
     #countdown-text {
-        left: 1%;
+        font-size: 16px;
     }
     #countdown-s-text {
-        left: 1%;
+        font-size: 16px;
+    }
+    #countdown-timeup {
+        font-size: 72px;
     }
     .guess-btn {
         padding: 3px 102px;
@@ -1227,8 +1230,14 @@ input:checked + .slider:before {
         padding: 10px 20px;
         font-size: 20px;
     }
+    .dropdown-menu {
+        max-height: 200px;
+    }
+    .dropdown-menu li {
+        padding: 5px;
+    }
     .guess-result {
-        font-size: 16px;
+        font-size: 20px;
     }
     .next-round {
         padding: 10px 20px;
@@ -1238,7 +1247,7 @@ input:checked + .slider:before {
         font-size: 30px;
     }
     #final-score {
-        font-size: 100px;
+        font-size: 140px;
     }
     .menu-btn {
         padding: 10px 20px;
