--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -772,6 +772,10 @@ input:checked + .slider:before {
 }
 .random-image {
     z-index: -1;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
 }
 .starrail-container {
@@ -1015,6 +1019,7 @@ input:checked + .slider:before {
     position: absolute;
     top: 4%;
     left: 46.5%;
+    margin: auto;
     transform: translate(-50%, -50%);
     font-size: 24px;
     font-weight: bold;
@@ -1029,6 +1034,7 @@ input:checked + .slider:before {
     position: absolute;
     top: 3%;
     left: 50%;
+    margin: auto;
     transform: translate(-50%, -50%);
     font-size: 24px;
     font-weight: bold;
@@ -1140,7 +1146,7 @@ input:checked + .slider:before {
         bottom: 35vh;
     }
     .lihsr {
-        transform: translate(-50%, -50%) scale(0.5); /* Shrink the logo by 50% */
+        transform: translate(-50%, -50%) scale(0.4);
     }
     .version {
         font-size: 20px;
@@ -1156,11 +1162,11 @@ input:checked + .slider:before {
     
     .settings-text {
         width: 10%;
-        font-size: 30px; /* Adjust the font-size as needed */
+        font-size: 30px;
     }
     .options-text,
     .credits-text {
-        font-size: 30px; /* Adjust the font-size as needed */
+        font-size: 30px;
     }
     .credits-content {
         font-size: 16px;
@@ -1195,12 +1201,20 @@ input:checked + .slider:before {
     }
     .settings-map-wrapper {
         height: 8%;
+        top: 0.25vh;
+    }
+    .settings-gamemode-wrapper {
+        height: 8%;
     }
     .settings-gamerules-wrapper {
         height: 8%;
     }
     .seedtext {
         font-size: 16px;
+    }
+    .seedinput {
+        padding: 2vh 8vw;
+        font-size: 10px;
     }
     #starrailmap {
         width: 250px;
