--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -877,7 +877,7 @@ input:checked + .slider:before {
 .dropdown-menu .sub-menu-txl,
 .dropdown-menu .sub-menu-p{
     display: none;
-    max-height: 200px; /* Adjust the height as needed */
+    max-height: 200px;
     overflow: auto;
 }
 
@@ -1026,34 +1026,36 @@ input:checked + .slider:before {
     transition: opacity 0.5s ease, transform 0.4s ease;
     flex-shrink: 0;
 }
-
-#countdown-text {
-    position: absolute;
-    top: 4%;
+.countdown-container {
+    top: 1%;
+    position: fixed;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translateX(-50%);
+    width: 100%;
+    height: 10%;
+    display: flex;
+    justify-content: center;
+    align-items: baseline;
+    flex-direction: row;
+    z-index: 4;
+}
+#countdown-text,
+#countdown-s-text {
     font-size: 24px;
+    margin: 10px;
     font-weight: bold;
-    color: white;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgb(0, 0, 0, 0.5);
+    border-radius: 10px;
     padding: 10px;
     z-index: 4;
     display: none;
     transition: 0.5s ease;
 }
+#countdown-text {
+    color: white;
+}
 #countdown-s-text {
-    position: absolute;
-    top: 3%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: 24px;
-    font-weight: bold;
     color: rgb(255, 245, 159);
-    background-color: rgba(0, 0, 0, 0.5);
-    padding: 10px;
-    z-index: 4;
-    display: none;
-    transition: 0.5s ease;
 }
 #countdown-timeup {
     position: absolute;
@@ -1255,6 +1257,12 @@ input:checked + .slider:before {
     .dropdown-menu {
         max-height: 200px;
     }
+    .dropdown-menu .sub-menu-hst,
+    .dropdown-menu .sub-menu-j6,
+    .dropdown-menu .sub-menu-txl,
+    .dropdown-menu .sub-menu-p{
+        max-height: 100px;
+    }
     .dropdown-menu li {
         padding: 5px;
     }
@@ -1264,6 +1272,9 @@ input:checked + .slider:before {
     .next-round {
         padding: 10px 20px;
         font-size: 20px;
+    }
+    .countdown-container {
+        justify-content: start;
     }
     .finaltext {
         font-size: 30px;
