--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1142,21 +1142,23 @@ input:checked + .slider:before {
     opacity: 0.8;
     color: rgb(255, 177, 177);
 }
-@keyframes pulse {
+
+@keyframes warning-glow {
     0% {
-      box-shadow: 0 0 0 0 rgba(255, 0, 0, 0.8);
+      box-shadow: inset 0 0 50px 15px rgba(255, 0, 0, 0.1);
     }
-    70% {
-      box-shadow: 0 0 0 10px rgba(255, 0, 0, 0);
+    50% {
+      box-shadow: inset 0 0 50px 20px rgba(255, 0, 0, 0.4);
     }
     100% {
-      box-shadow: 0 0 0 0 rgba(255, 0, 0, 0);
+      box-shadow: inset 0 0 50px 15px rgba(255, 0, 0, 0.1);
     }
 }
   
-.pulse-glow {
-    animation: pulse 1s infinite;
+.warning-glow {
+    animation: warning-glow 2.5s infinite;
 }
+
 .gameaudio {
     display: none;
 }
