--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1044,7 +1044,7 @@ input:checked + .slider:before {
     font-size: 24px;
     margin: 10px;
     font-weight: bold;
-    background-color: rgb(0, 0, 0, 0.5);
+    background-color: rgba(25, 28, 56, 0.6);
     border-radius: 10px;
     padding: 10px;
     z-index: 4;
@@ -1063,7 +1063,7 @@ input:checked + .slider:before {
     font-size: 96px;
     font-weight: bold;
     color: rgb(255, 255, 255);
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgb(0, 0, 0, 0.8);
     padding: 10px;
     z-index: 4;
     display: none;
@@ -1285,6 +1285,9 @@ input:checked + .slider:before {
     }
     .dropdown-menu li {
         padding: 5px;
+    }
+    .floor-btn {
+        font-size: 10px;
     }
     .guess-result {
         font-size: 20px;
