--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -777,7 +777,8 @@ input:checked + .slider:before {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: auto;
+    object-fit: cover;
 }
 .starrail-container {
     position: fixed;
@@ -1109,6 +1110,25 @@ input:checked + .slider:before {
     font-size: 20px;
     opacity: 0.5;
 }
+#diff1,
+#diff2,
+#diff3,
+#diff4,
+#diff5,
+#diff6,
+#diff7,
+#diff8,
+#diff9,
+#filter1,
+#filter2,
+#filter3,
+#filter4 {
+  position: relative;
+  z-index: 4;
+  width: 50px;
+  height: 50px;
+  display: none;
+}
 .finaltext {
     position: absolute;
     margin: auto;
@@ -1313,6 +1333,25 @@ input:checked + .slider:before {
     #round-info,
     #score-info {
         font-size: 20px;
+    }
+    #diff1,
+    #diff2,
+    #diff3,
+    #diff4,
+    #diff5,
+    #diff6,
+    #diff7,
+    #diff8,
+    #diff9,
+    #filter1,
+    #filter2,
+    #filter3,
+    #filter4 {
+    position: relative;
+    z-index: 4;
+    width: 35px;
+    height: 35px;
+    display: none;
     }
     .game-stat {
         min-width: 220px;
