--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1167,7 +1167,39 @@ input:checked + .slider:before {
     opacity: 0.8;
     color: rgb(255, 177, 177);
 }
-
+.rotate-screen-mobile {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: none;
+    background-color: rgb(91, 99, 206);
+    z-index: 10;
+    transition: opacity 0.5s ease;
+}
+.rotate-screen-mobile-text {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 50%;
+    height: auto;
+    color: white;
+    font-size: 15px; /* Adjust the font-size as needed */
+    text-shadow: 2px 2px 2px black;
+    z-index: 10;
+    display: none;
+    transition: opacity 0.75s ease, transform 0.5s ease;
+}
+@media (max-aspect-ratio: 1/1) {
+    .rotate-screen-mobile {
+        display: block;
+    }
+    .rotate-screen-mobile-text {
+        display: block;
+    }
+  }
 @keyframes warning-glow {
     0% {
       box-shadow: inset 0 0 50px 15px rgba(255, 0, 0, 0.1);
