--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -185,36 +185,36 @@ a:hover {
     transition: opacity 0.5s ease, transform 0.4s ease;
 }
 .volume {
-    -webkit-appearance: none;  /* Override default CSS styles */
+    -webkit-appearance: none;
     appearance: none;
-    width: 15vw; /* Full-width */
-    height: 10px; /* Specified height */
-    background: #d3d3d3; /* Grey background */
-    outline: none; /* Remove outline */
-    opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
-    -webkit-transition: .2s; /* 0.2 seconds transition on hover */
+    width: 15vw;
+    height: 10px;
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
     transition: opacity .2s;
     display: none;
     z-index: 4;
 }
 .volume:hover {
-    opacity: 1; /* Fully shown on mouse-over */
+    opacity: 1;
     z-index: 4;
 }
 .volume::-webkit-slider-thumb  {
-    -webkit-appearance: none; /* Override default look */
+    -webkit-appearance: none;
     appearance: none;
-    width: 35px; /* Set a specific slider handle width */
-    height: 35px; /* Slider handle height */
+    width: 35px;
+    height: 35px;
     background-image: url("../media/icons/radio-button-on-outline.svg");
-    cursor: pointer; /* Cursor on hover */
+    cursor: pointer;
     z-index: 4;
 }
 .volume::-moz-range-thumb  {
-    width: 25px; /* Set a specific slider handle width */
-    height: 10px; /* Slider handle height */
-    background: #04AA6D; /* Green background */
-    cursor: pointer; /* Cursor on hover */
+    width: 25px;
+    height: 10px;
+    background: #04AA6D;
+    cursor: pointer;
     z-index: 4;
 }
 .options-volume {
@@ -261,7 +261,7 @@ a:hover {
 .options-volumecontainer {
     display: flex;
     align-items: center;
-    justify-content: flex-end; /* Start from the right side */
+    justify-content: flex-end;
     right: 0;
 }
 .options-audioleft,
@@ -388,7 +388,7 @@ a:hover {
     width: 10%;
     height: auto;
     color: white;
-    font-size: 60px; /* Adjust the font-size as needed */
+    font-size: 60px;
     text-shadow: 2px 2px 2px black;
     z-index: 5;
     display: none;
@@ -413,14 +413,14 @@ a:hover {
     height: 15%;
     display: flex;
     align-items: center;
-    justify-content: space-between; /* Start from the right side */
+    justify-content: space-between;
     flex-wrap: wrap;
 }
 
 .settings-map-container {
     display: flex;
     align-items: center;
-    justify-content: flex-end; /* Start from the right side */
+    justify-content: flex-end;
     right: 0;
 }
 
@@ -528,11 +528,11 @@ a:hover {
     position: absolute;
     top: 9vw;
     right: 2vw;
-    width: 100%; /* Set the desired width */
-    height: 15%; /* Set the desired height */
+    width: 100%;
+    height: 15%;
     display: flex;
     align-items: center;
-    justify-content: space-between; /* Start from the right side */
+    justify-content: space-between;
 }
 .settings-gamemode-container {
     display: flex;
@@ -812,7 +812,6 @@ input:checked + .slider:before {
     transform: translateX(33px);
 }
 
-/* Rounded sliders */
 .slider.round {
     border-radius: 34px;
 }
